First commited as after_50231_rev1